[enh] Data: add statistical rectangle '25E4' (and hierarchy) [enh] Data: add weight length conversion for 25E4 (need by ADAP trip 100)